On hover tooltip working for charts

--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
             </div>
             <div class="row center-items full-width">
                 <div class="col-12 center-container full-width">
+                    <!--<div id="charttip-container"></div>-->
                     <div class="chart-viz center-container full-width"></div>
                 </div>
             </div>
-            <div class="row"></div>
-            <div class="row"></div>
         </section>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
