Added resize by funding option

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
                 <div class="col-12 center-container full-width">
                     <div class="viz center-container full-width" id="viz"></div>
                 </div>
+                <div class="col-12 center-container center-items full-width">
+                    <button type="button" class="btn btn-danger viz-buttons" id="resize">Resize by Funding</button>
+                    <button type="button" class="btn btn-outline-dark viz-buttons" id="reset">Reset</button>
+                </div>
             </div>
             <div class="row center-items full-width">
                 <div class="col-12 center-container full-width">
