Added tooltip to slider

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                     <div class="viz center-container full-width" id="viz"></div>
                 </div>
                 <div class="col-12 center-container center-items full-width margin-top viz-buttons">
-                    <form class="full-width center-items">
+                    <div class="full-width center-items">
                         <div class="form-group full-width center-items">
                             <input id="slider" data-slider-id='yearslider' type="text" data-slider-min="2000" data-slider-max="2015" data-slider-step="1" data-slider-value="2000" />
                         </div>
-                    </form>
+                    </div>
                 </div>
                 <div class="col-12 center-container center-items full-width">
                     <button type="button" class="btn btn-danger viz-buttons" id="resize">Resize by Funding</button>
