Added on hover state and county details

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <section id="viz-section" class="full-width">
             <div class="row center-items full-width">
                 <div class="col-12 center-container full-width">
+                    <div id="tooltip-container"></div>
                     <div class="viz center-container full-width" id="viz"></div>
                 </div>
                 <div class="col-12 center-container center-items full-width margin-top viz-buttons">
