--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 <body>
     <div class="container full-height">
         <section id="viz-section" class="full-width">
+            <div class="row center-items full-width margin-top">
+                <div class="center-items text-center">
+                    <h1 class="font_0">Correlating State Cancer Center Funding with State Cancer Mortality</h1>
+                </div>
+                <div class="center-items text-center">
+                    <p class="font_5">The following map shows the <span id="map-tag">age-adjusted death rate for each state for each year</span>. <span class="darkred">Darker the red</span>, higher the <span class="darkred">death rate</span>. The <span class="blue">blue dots</span> on the
+                        map show the <u><a href="https://www.cancer.gov/research/nci-role/cancer-centers" target="_blank">NCI designated cancer centers</a></u>. <span class="darkblue">Darker blues</span> show the <span class="darkblue">better funded</span> cancer centers.<br/><span class="viz-buttons"> You are currently looking at year: <b><span id="main-year">2000</span></b></span></p>
+                </div>
+                <div class="margin-top-bottom text-center">
+                    <p class="font_4 viz-buttons">Click on map to reveal state information. Hover on map for details.<br/><span class="">Use the slider below to set year. Click button below to resize states by funding.</span></p>
+                    <p class=" font_4 hidden" id="scroll-text">Hover on map for details. Scroll down for trends.<br/>Click on map to zoom out.</p>
+                </div>
+            </div>
             <div class="row center-items full-width">
                 <div class="col-12 center-container full-width">
                     <div id="tooltip-container"></div>
@@ -18,17 +31,18 @@
                 </div>
                 <div class="col-12 center-container center-items full-width margin-top viz-buttons">
                     <div class="full-width center-items">
-                        <div class="form-group full-width center-items">
+                        <div class="form-group full-width center-items vertical-flow">
+                            <p class="font_4">Use this slider to set year.</p>
                             <input id="slider" data-slider-id='yearslider' type="text" data-slider-min="2000" data-slider-max="2015" data-slider-step="1" data-slider-value="2000" />
                         </div>
                     </div>
                 </div>
-                <div class="col-12 center-container center-items full-width">
+                <div class="col-12 center-container center-items full-width text-center">
                     <button type="button" class="btn btn-danger viz-buttons" id="resize">Resize by Funding</button>
                     <button type="button" class="btn btn-outline-dark viz-buttons" id="reset">Reset</button>
                 </div>
             </div>
-            <div class="row center-items full-width">
+            <div class="row center-items full-width text-center">
                 <div class="col-12 center-container full-width">
                     <div class="chart-viz center-container full-width"></div>
                 </div>
