added more text

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Correlating state cancer center funding with state cancer mortality trends to analyse the impact of funding on state cancer.">
+    <meta name="keywords" content="nci,national,cancer,center,designated,funding,trends,death,mortality,analysis">
+    <meta name="author" content="Ganesh Jagadeesan<https://github.com/Elefhead>">
     <title>FARCRY</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.3.2/css/bootstrap-slider.min.css">
