added more annotations

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="center-items text-center">
                     <p class="font_5">The following map shows the <span id="map-tag">age-adjusted death rate for each state for each year</span>. <span class="darkred">Darker the red</span>, higher the <span class="darkred">death rate</span>. The <span class="blue">blue dots</span> on the
-                        map show the <u><a href="https://www.cancer.gov/research/nci-role/cancer-centers" target="_blank">NCI designated cancer centers</a></u>. <span class="darkblue">Darker blues</span> show the <span class="darkblue">better funded</span> cancer centers as compared to the <span class="blue">blue</span> or <span class="lightblue">light blue</span> ones.<br/><span class="viz-buttons"> You are currently looking at year: <b><span id="main-year">2000</span></b></span></p>
+                        map show the <u><a href="https://www.cancer.gov/research/nci-role/cancer-centers" target="_blank">NCI designated cancer centers</a></u>. <span class="darkblue">Darker blues</span> show the <span class="darkblue">better funded</span> cancer centers as compared to the <span class="blue">blue</span> or <span class="lightblue">light blue</span> ones.<br/><span class="viz-buttons"> You are currently looking at year: <b><span class="main-year">2000</span></b></span></p>
                 </div>
                 <div class="margin-top-bottom text-center">
                     <p class="font_4 viz-buttons">Click on map to reveal state information. Hover on map for details.<br/><span class="">Use the slider below to set year. Click button below to resize states by funding.</span></p>
@@ -35,7 +35,7 @@
                 <div class="col-12 center-container center-items full-width margin-top viz-buttons">
                     <div class="full-width center-items">
                         <div class="form-group full-width center-items vertical-flow">
-                            <p class="font_4">Use this slider to set year.</p>
+                            <p class="font_4">Use this slider to set year. You are currently looking at year: <b><span class="main-year">2000</span></b></p>
                             <input id="slider" data-slider-id='yearslider' type="text" data-slider-min="2000" data-slider-max="2015" data-slider-step="1" data-slider-value="2000" />
                         </div>
                     </div>
