--- a/index.html
+++ b/index.html
@@ -50,6 +50,34 @@
                     <div class="chart-viz center-container full-width"></div>
                 </div>
             </div>
+            <div class="row center-items full-width margin-top">
+                <div class="col-12 center-container full-width">
+                    <div class="col-12 center-container">
+                        <h1>Details</h1>
+                    </div>
+                    <div class="col-12 center-container">
+                        <ul class="font_5">
+                            <li>This visualization shows the age-adjusted <span class="darkred">death rate</span> for each state over the years 2000-2015.</li>
+                            <li>The county data is not year-wise. It is the 5 year average (2012-2017) age-adjusted death rate.</li>
+                            <li>All the funding data is in terms of $1,000 per unit.</li>
+                            <li>The blue dots show the following:
+                                <ul>
+                                    <li>
+                                        The <span class="darkblue">dark blue</span> dots show <span class="darkblue">Comprehensive cancer center</span>.
+                                    </li>
+                                    <li>
+                                        The <span class="blue">blue</span> dots show <span class="blue">Clinical cancer center</span>.
+                                    </li>
+                                    <li>
+                                        The <span class="lightblue">light blue</span> dots show <span class="lightblue">Basic cancer center</span>.
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>The timeseries graphs that display trends for a specific state can be filtered using the labels.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
     <div class="footer"></div>
