--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <div class="col-12 center-container">
                         <ul class="font_5">
                             <li>This visualization shows the age-adjusted <span class="darkred">death rate</span> for each state over the years 2000-2015.</li>
+                            <li>The slider can be used to change the year; it only affects the state data. On the zoomed-out map the shows all of USA.</li>
                             <li>The county data is not year-wise. It is the 5 year average (2012-2017) age-adjusted death rate.</li>
                             <li>All the funding data is in terms of $1,000 per unit.</li>
                             <li>The blue dots show the following:
